// Copyright 2021-Present Datadog, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package quickwit.common;

// The corresponding Rust struct [`crate::types::DocMappingUid`] is defined manually and
// externally provided during code generation (see `build.rs`).
//
// Modify at your own risk.
message DocMappingUid {
  // ULID encoded as a sequence of 16 bytes (big-endian u128).
  bytes doc_mapping_uid = 1;
}

// The corresponding Rust struct [`crate::types::DocUid`] is defined manually and
// externally provided during code generation (see `build.rs`).
//
// Modify at your own risk.
message DocUid {
  // ULID encoded as a sequence of 16 bytes (big-endian u128).
  bytes doc_uid = 1;
}

// The corresponding Rust struct [`crate::types::IndexUid`] is defined manually and
// externally provided during code generation (see `build.rs`).
//
// Modify at your own risk.
message IndexUid {
  string index_id = 1;
  // ULID encoded as a sequence of 16 bytes (big-endian u128).
  bytes incarnation_id = 2;
}
